[package]
name = "biomeos-api"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
# Web framework
axum = { workspace = true }
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true, features = ["cors", "trace", "set-header", "limit"] }

# Async runtime
tokio = { workspace = true, features = ["net", "io-util", "fs", "signal"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true, features = ["compat", "io"] }
futures = { workspace = true }

# HTTP server (for Unix socket support)
hyper = { workspace = true, features = ["server", "http1"] }
hyper-util = { workspace = true, features = ["tokio", "server", "server-auto"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Internal dependencies
# NOTE: http-transport feature REMOVED - using Unix sockets for primal communication
biomeos-core = { path = "../biomeos-core", version = "0.1.0" }
biomeos-types = { path = "../biomeos-types", version = "0.1.0" }
biomeos-graph = { path = "../biomeos-graph", version = "0.1.0" }
biomeos-spore = { path = "../biomeos-spore", version = "0.1.0" }
biomeos-genome-factory = { path = "../biomeos-genome-factory", version = "1.0.0" }
biomeos-genomebin-v3 = { path = "../biomeos-genomebin-v3", version = "3.0.0" }
neural-api-client = { path = "../neural-api-client" }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# HTTP client REMOVED - Using Unix socket JSON-RPC for primal discovery
# External HTTP/HTTPS requests should go through Songbird

# Utilities
# DEEP DEBT: lazy_static replaced by std::sync::OnceLock; dirs replaced by etcetera (pure Rust)
etcetera = { workspace = true }
semver = { workspace = true }
base64 = { workspace = true }

# WebSocket support (JSON-RPC 2.0 over WebSocket)
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-stream = { workspace = true }

[dev-dependencies]
biomeos-test-utils = { path = "../biomeos-test-utils", version = "0.1.0" }
# Testing utilities
tokio-test = { workspace = true }
http-body-util = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
