[package]
name = "biomeos-atomic-deploy"
version = "0.1.0"
edition.workspace = true
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1.0"
bytes = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { workspace = true, features = ["test-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }  # For binaries
thiserror = "1.0"
rustix = { version = "0.38", features = ["process"] }
# users crate REMOVED (RUSTSEC-2024-0399/RUSTSEC-2025-0040): unmaintained + vulnerability
# UID retrieval now uses rustix::process::getuid() (already a dependency, pure Rust)
# System metrics: pure Rust via /proc (ecoBin v3)
regex = "1.11"  # For socket pattern matching
rand = "0.8"  # For JWT secret generation
base64 = { workspace = true }  # For JWT secret encoding

# biomeOS crates
biomeos-spore = { path = "../biomeos-spore", version = "0.1.0" }
biomeos-core = { path = "../biomeos-core", version = "0.1.0" }
biomeos-federation = { path = "../biomeos-federation", version = "0.1.0" }
biomeos-types = { path = "../biomeos-types", version = "0.1.0" }
biomeos-primal-sdk = { path = "../biomeos-primal-sdk", version = "0.1.0" }
tarpc = { workspace = true }
tokio-serde = { workspace = true }
biomeos-graph = { path = "../biomeos-graph", version = "0.1.0" }
chrono = "0.4"
futures = { workspace = true }
uuid = { version = "1.11", features = ["v4"] }  # For request ID generation
toml = "0.8"  # For Neural API graph parsing

# Neural API integration (neural-api-client crate exists — uncomment when wired)
# neural-api-client = { path = "../neural-api-client" }

[dev-dependencies]
biomeos-test-utils = { path = "../biomeos-test-utils", version = "0.1.0" }
tempfile = "3.8"
tokio-test = "0.4"
rand = "0.8"

[lints]
workspace = true
