[package]
name = "biomeos-atomic-deploy"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }  # For binaries
thiserror = { workspace = true }
rustix = { workspace = true, features = ["process"] }
# users crate REMOVED (RUSTSEC-2024-0399/RUSTSEC-2025-0040): unmaintained + vulnerability
# UID retrieval now uses rustix::process::getuid() (already a dependency, pure Rust)
# System metrics: pure Rust via /proc (ecoBin v3)
regex = { workspace = true }  # For socket pattern matching
rand = { workspace = true }  # For JWT secret generation
base64 = { workspace = true }  # For JWT secret encoding

# biomeOS crates
biomeos-spore = { path = "../biomeos-spore", version = "0.1.0" }
biomeos-core = { path = "../biomeos-core", version = "0.1.0" }
biomeos-federation = { path = "../biomeos-federation", version = "0.1.0" }
biomeos-types = { path = "../biomeos-types", version = "0.1.0" }
biomeos-primal-sdk = { path = "../biomeos-primal-sdk", version = "0.1.0" }
tarpc = { workspace = true }
tokio-serde = { workspace = true }
biomeos-graph = { path = "../biomeos-graph", version = "0.1.0" }
chrono = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }  # For request ID generation
toml = { workspace = true }  # For Neural API graph parsing

# Neural API integration (neural-api-client crate exists — uncomment when wired)
# neural-api-client = { path = "../neural-api-client" }

[dev-dependencies]
biomeos-test-utils = { path = "../biomeos-test-utils", version = "0.1.0" }
tempfile = { workspace = true }
tokio-test = { workspace = true }
rand = { workspace = true }

[lints]
workspace = true
