[package]
name = "biomeos-boot"
version = "0.1.0"
edition.workspace = true
authors = ["BiomeOS Contributors"]
description = "Pure Rust boot infrastructure for BiomeOS"
license = "AGPL-3.0-only"

[dependencies]
# Core async runtime
tokio = { workspace = true }
anyhow = "1"
thiserror = "1"

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Serialization for manifests and configs
serde = { version = "1", features = ["derive"] }
serde_yaml.workspace = true
toml = "0.8"

# System interaction (pure Rust via rustix)
rustix = { version = "0.38", features = ["fs", "mount", "process"] }

# Hardware detection (pure Rust via /proc - ecoBin v3)

# UUID for device identification
uuid = { version = "1", features = ["v4", "serde"] }

# Filesystem operations
tar = "0.4"
flate2 = "1.0"

# Network discovery
mdns-sd = "0.11"

# Cryptographic operations
sha2 = "0.10"
hex = "0.4"

# Path and file utilities
walkdir = "2"
tempfile = "3"

# CLI parsing
clap = { version = "4", features = ["derive", "cargo"] }

# Date/time
chrono = "0.4"

# Process utilities
which = "6"

# BiomeOS crates
biomeos-types = { path = "../biomeos-types", version = "0.1.0" }
biomeos-core = { path = "../biomeos-core", version = "0.1.0" }

[dev-dependencies]
tokio-test = "0.4"
assert_cmd = "2"
predicates = "3"
biomeos-test-utils = { path = "../biomeos-test-utils", version = "0.1.0" }

[[bin]]
name = "biomeos-init"
path = "src/bin/init.rs"

[[bin]]
name = "biomeos-mkboot"
path = "src/bin/mkboot.rs"

[[bin]]
name = "biomeos-rootfs"
path = "src/bin/biomeos-rootfs.rs"

# NOTE: Profile configuration moved to workspace root Cargo.toml
# (non-root profile sections are ignored by cargo)

[features]
default = []
# Hardware-specific features
efi = []
bios = ["default"]

[lints]
workspace = true
