[package]
name = "biomeos-boot"
version.workspace = true
edition.workspace = true
authors = ["BiomeOS Contributors"]
description = "Pure Rust boot infrastructure for BiomeOS"
license.workspace = true
rust-version.workspace = true

[dependencies]
# Core async runtime
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Structured logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }

# Serialization for manifests and configs
serde = { workspace = true }
serde_yaml.workspace = true
toml = { workspace = true }

# System interaction (pure Rust via rustix)
rustix = { workspace = true, features = ["fs", "mount", "process"] }

# Hardware detection (pure Rust via /proc - ecoBin v3)

# UUID for device identification
uuid = { workspace = true }

# Filesystem operations
tar = { workspace = true }
flate2 = { workspace = true }

# Network discovery
mdns-sd = { workspace = true }

# Cryptographic operations
sha2 = { workspace = true }
hex = { workspace = true }

# Path and file utilities
walkdir = { workspace = true }
tempfile = { workspace = true }

# CLI parsing
clap = { workspace = true, features = ["cargo"] }

# Date/time
chrono = { workspace = true }

# Process utilities
which = { workspace = true }

# BiomeOS crates
biomeos-types = { path = "../biomeos-types", version = "0.1.0" }
biomeos-core = { path = "../biomeos-core", version = "0.1.0" }

[dev-dependencies]
tokio-test = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
biomeos-test-utils = { path = "../biomeos-test-utils", version = "0.1.0" }

[[bin]]
name = "biomeos-init"
path = "src/bin/init.rs"

[[bin]]
name = "biomeos-mkboot"
path = "src/bin/mkboot.rs"

[[bin]]
name = "biomeos-rootfs"
path = "src/bin/biomeos-rootfs.rs"

# NOTE: Profile configuration moved to workspace root Cargo.toml
# (non-root profile sections are ignored by cargo)

[features]
default = []
# Hardware-specific features
efi = []
bios = ["default"]

[lints]
workspace = true
