[package]
name = "biomeos-chimera"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Chimera system for BiomeOS - mixed-boundary primal amalgams"

[dependencies]
# Core BiomeOS types
biomeos-types = { path = "../biomeos-types" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }

