[package]
name = "biomeos-cli"
version = "0.1.0"
edition = "2021"
description = "BiomeOS CLI tools for system management, discovery, and monitoring"
authors = ["BiomeOS Team"]

[[bin]]
name = "biomeos"
path = "src/bin/main.rs"

[[bin]]
name = "verify-lineage"
path = "src/bin/verify-lineage.rs"

[dependencies]
biomeos-core = { path = "../biomeos-core" }
biomeos-primal-sdk = { path = "../biomeos-primal-sdk" }
biomeos-types = { path = "../biomeos-types" }
biomeos-chimera = { path = "../biomeos-chimera" }
biomeos-spore = { path = "../biomeos-spore" }
biomeos-federation = { path = "../biomeos-federation" }
biomeos-graph = { path = "../biomeos-graph" }
biomeos-manifest = { path = "../biomeos-manifest" }
clap = { version = "4.4", features = ["derive", "color"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# HTTP client DEPRECATED: Use atomic_client (Unix sockets) for primal communication
# reqwest = { version = "0.11", features = ["json"] } # REMOVED - Use Songbird/BearDog
ratatui = "0.24"
crossterm = "0.27"
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17"
console = "0.15"
colored = "2.0"
comfy-table = "7.0"
humantime = "2.1"
sysinfo = "0.29"
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.22"
sha2 = "0.10"

[dev-dependencies]
biomeos-test-utils = { path = "../biomeos-test-utils" }
# Testing HTTP client - for benchmarks comparing Tower atomic vs HTTP
# reqwest = { workspace = true }  # REMOVED: CLI uses atomic_client for Pure Rust # For testing/benchmarking only
tokio = { workspace = true, features = ["full"] }
tempfile = { workspace = true }
