[package]
name = "biomeos-cli"
version = "0.1.0"
edition.workspace = true
license = "AGPL-3.0-only"
description = "BiomeOS CLI tools for system management, discovery, and monitoring"
authors = ["BiomeOS Team"]

[[bin]]
name = "biomeos-cli"
path = "src/bin/main.rs"
doc = false  # Avoid collision with biomeos-unibin

[[bin]]
name = "verify-lineage"
path = "src/bin/verify-lineage.rs"

[dependencies]
biomeos-core = { path = "../biomeos-core", version = "0.1.0" }
biomeos-primal-sdk = { path = "../biomeos-primal-sdk", version = "0.1.0" }
biomeos-types = { path = "../biomeos-types", version = "0.1.0" }
biomeos-chimera = { path = "../biomeos-chimera", version = "0.1.0" }
biomeos-spore = { path = "../biomeos-spore", version = "0.1.0" }
biomeos-federation = { path = "../biomeos-federation", version = "0.1.0" }
biomeos-graph = { path = "../biomeos-graph", version = "0.1.0" }
biomeos-manifest = { path = "../biomeos-manifest", version = "0.1.0" }
biomeos-genome-factory = { path = "../biomeos-genome-factory", version = "1.0.0" }
biomeos-genomebin-v3 = { path = "../biomeos-genomebin-v3", version = "3.0.0" }
clap = { version = "4.4", features = ["derive", "color"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# HTTP client DEPRECATED: Use atomic_client (Unix sockets) for primal communication
# reqwest = { version = "0.11", features = ["json"] } # REMOVED - Use Songbird/BearDog
ratatui = { version = "0.24", optional = true }
crossterm = { version = "0.27", optional = true }
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17"
console = "0.15"
colored = "2.0"
comfy-table = "7.0"
humantime = "2.1"
# sysinfo removed (ecoBin v3): use biomeos-system pure /proc metrics
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.22"
sha2 = "0.10"
# dirs removed — pure Rust via $HOME env resolution

[features]
default = []
# DEPRECATED: Legacy TUI dashboard predates petalTongue (the universal UI primal).
# Enable only for backward compatibility. Use `biomeos-cli dashboard --petaltongue` instead.
deprecated-tui = ["ratatui", "crossterm"]

[dev-dependencies]
biomeos-test-utils = { path = "../biomeos-test-utils", version = "0.1.0" }
# Testing HTTP client - for benchmarks comparing Tower atomic vs HTTP
# reqwest = { workspace = true }  # REMOVED: CLI uses atomic_client for Pure Rust # For testing/benchmarking only
tokio = { workspace = true, features = ["full"] }
tempfile = { workspace = true }

[lints]
workspace = true
