[package]
name = "biomeos-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "BiomeOS CLI tools for system management, discovery, and monitoring"
authors = ["BiomeOS Team"]

[[bin]]
name = "biomeos-cli"
path = "src/bin/main.rs"
doc = false  # Avoid collision with biomeos-unibin

[[bin]]
name = "verify-lineage"
path = "src/bin/verify-lineage.rs"

[dependencies]
biomeos-core = { path = "../biomeos-core", version = "0.1.0" }
biomeos-primal-sdk = { path = "../biomeos-primal-sdk", version = "0.1.0" }
biomeos-types = { path = "../biomeos-types", version = "0.1.0" }
biomeos-chimera = { path = "../biomeos-chimera", version = "0.1.0" }
biomeos-spore = { path = "../biomeos-spore", version = "0.1.0" }
biomeos-federation = { path = "../biomeos-federation", version = "0.1.0" }
biomeos-graph = { path = "../biomeos-graph", version = "0.1.0" }
biomeos-manifest = { path = "../biomeos-manifest", version = "0.1.0" }
biomeos-genome-factory = { path = "../biomeos-genome-factory", version = "1.0.0" }
biomeos-genomebin-v3 = { path = "../biomeos-genomebin-v3", version = "3.0.0" }
clap = { workspace = true, features = ["color"] }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml.workspace = true
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }
chrono = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }
colored = { workspace = true }
comfy-table = { workspace = true }
humantime = { workspace = true }
# sysinfo removed (ecoBin v3): use biomeos-system pure /proc metrics
uuid = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
# dirs removed — pure Rust via $HOME env resolution

[features]
default = []

[dev-dependencies]
biomeos-test-utils = { path = "../biomeos-test-utils", version = "0.1.0" }
toml = { workspace = true }
# Testing HTTP client - for benchmarks comparing Tower atomic vs HTTP
# reqwest = { workspace = true }  # REMOVED: CLI uses atomic_client for Pure Rust # For testing/benchmarking only
tokio = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
