[package]
name = "biomeos-compute"
version = "0.1.0"
edition = "2021"
authors = ["ecoPrimals Team"]
description = "Isomorphic & fractal compute architecture for biomeOS"
license = "AGPL-3.0-only"

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# UUID for node IDs
uuid = { workspace = true }

# Time
chrono = { workspace = true }

# biomeOS types (for bytes_serde)
biomeos-types = { path = "../biomeos-types", version = "0.1.0" }

[dev-dependencies]
tokio-test = { workspace = true }

[lib]
name = "biomeos_compute"
path = "src/lib.rs"

