[package]
name = "biomeos-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core biomeOS functionality"

[[bin]]
name = "tower"
path = "src/bin/tower.rs"

[dependencies]
# Core async and serialization
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"
# reqwest = { workspace = true, optional = true }  # REMOVED: Deprecated HTTP transport, use Tower Atomic (Songbird + BearDog)
futures = "0.3"
hex = "0.4"
clap = { version = "4.5", features = ["derive", "env"] }

# Configuration and environment
config = { workspace = true }
# dirs = { workspace = true }  # DEPRECATED: Uses dirs-sys (C dependency)
etcetera = { workspace = true }  # Pure Rust replacement
toml = "0.8"

# Utilities
bytes = { workspace = true }
itertools = { workspace = true }
once_cell = { workspace = true }
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
semver = { version = "1.0", features = ["serde"] }
url = "2.5"
zeroize = { version = "1.7", features = ["derive"] }
rand = "0.8"
hostname = "0.4"
glob = "0.3"
rustix = { version = "0.38", features = ["fs"] }  # statvfs for storage metrics
biomeos-system = { path = "../biomeos-system", version = "0.1.0" }  # Real uptime and resource metrics

# biomeOS dependencies
biomeos-types = { path = "../biomeos-types", version = "0.1.0" }
biomeos-primal-sdk = { path = "../biomeos-primal-sdk", version = "0.1.0" }
biomeos-graph = { path = "../biomeos-graph", version = "0.1.0" }
biomeos-manifest = { path = "../biomeos-manifest", version = "0.1.0" }
biomeos-nucleus = { path = "../biomeos-nucleus", version = "0.1.0" }

[dev-dependencies]
# Testing framework
mockall = { workspace = true }
tokio-test = "0.4"
wiremock = "0.6" 
tempfile = { workspace = true }
criterion = { workspace = true }
# REMOVED for ecoBin v2.0: Use ureq or atomic_client for Pure Rust
ureq = { workspace = true }

# Test utilities
serde_json = { workspace = true }
tracing-test = "0.2"

[features]
default = []
# http-transport = [] # REMOVED: HTTP transport removed, use atomic_client
