[package]
name = "biomeos-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core biomeOS functionality"

[[bin]]
name = "tower"
path = "src/bin/tower.rs"

[dependencies]
# Core async and serialization
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# reqwest = { workspace = true, optional = true }  # REMOVED: Deprecated HTTP transport, use Tower Atomic (Songbird + BearDog)
futures = { workspace = true }
hex = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }

# Configuration and environment
# dirs = { workspace = true }  # DEPRECATED: Uses dirs-sys (C dependency)
etcetera = { workspace = true }  # Pure Rust replacement
toml = { workspace = true }

# Utilities
bytes = { workspace = true }
itertools = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
semver = { workspace = true }
url = { workspace = true }
# HTTP(S) for primal registry: hyper for http://; HTTPS uses curl subprocess (avoids rustls→ring per ecoBin policy)
hyper = { workspace = true }
hyper-util = { workspace = true, features = ["tokio", "client", "client-legacy", "http1"] }
http-body-util = { workspace = true }
zeroize = { workspace = true }
rand = { workspace = true }
gethostname = { workspace = true }
glob = { workspace = true }
rustix = { workspace = true, features = ["fs"] }  # statvfs for storage metrics
biomeos-system = { path = "../biomeos-system", version = "0.1.0" }  # Real uptime and resource metrics

# biomeOS dependencies
biomeos-types = { path = "../biomeos-types", version = "0.1.0" }
biomeos-primal-sdk = { path = "../biomeos-primal-sdk", version = "0.1.0" }
biomeos-graph = { path = "../biomeos-graph", version = "0.1.0" }
biomeos-manifest = { path = "../biomeos-manifest", version = "0.1.0" }
biomeos-nucleus = { path = "../biomeos-nucleus", version = "0.1.0" }

[dev-dependencies]
tokio-test = { workspace = true }
wiremock = { workspace = true }
tempfile = { workspace = true }
criterion = { workspace = true }
# REMOVED for ecoBin v2.0: Use ureq or atomic_client for Pure Rust
ureq = { workspace = true }

# Test utilities
biomeos-test-utils = { path = "../biomeos-test-utils", version = "0.1.0" }
serde_json = { workspace = true }
tracing-test = { workspace = true }
proptest = { workspace = true }

[features]
default = []
# http-transport = [] # REMOVED: HTTP transport removed, use atomic_client

[lints]
workspace = true
