[package]
name = "biomeos-deploy"
version = "0.1.0"
edition.workspace = true
authors = ["BiomeOS Contributors"]
description = "Pure Rust deployment orchestration for BiomeOS"
license = "AGPL-3.0-only"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# System interaction (process signals via rustix)
rustix = { version = "0.38", features = ["process"] }

# Process management
tokio-process = "0.2"

# Path and file utilities
walkdir = "2"
tempfile = "3"

# CLI
clap = { version = "4", features = ["derive", "cargo"] }

# UUID for instance identification
uuid = { version = "1", features = ["v4", "serde"] }

# BiomeOS crates
biomeos-types = { path = "../biomeos-types", version = "0.1.0" }
biomeos-core = { path = "../biomeos-core", version = "0.1.0" }

[dev-dependencies]
tokio-test = "0.4"


[lints]
workspace = true
