[package]
name = "biomeos-deploy"
version.workspace = true
edition.workspace = true
authors = ["BiomeOS Contributors"]
description = "Pure Rust deployment orchestration for BiomeOS"
license.workspace = true
rust-version.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["net", "fs"] }
futures = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }

# Serialization
serde = { workspace = true }
serde_yaml.workspace = true
serde_json = { workspace = true }

# System interaction (process signals via rustix)
rustix = { workspace = true, features = ["process"] }

# Network bridge management (pure Rust via Netlink, replaces shell-outs to `ip`/`brctl`).
# Transitive dep on `netlink-sys` — thin FFI for AF_NETLINK kernel socket,
# comparable to rustix's linux-raw-sys. No userspace C library.
rtnetlink = { workspace = true }

# Path and file utilities
tempfile = { workspace = true }

# CLI
clap = { workspace = true, features = ["cargo"] }

# UUID for instance identification
uuid = { workspace = true }

# BiomeOS crates
biomeos-types = { path = "../biomeos-types", version = "0.1.0" }
biomeos-core = { path = "../biomeos-core", version = "0.1.0" }

[dev-dependencies]
tokio-test = { workspace = true }

[lints]
workspace = true
