[package]
name = "biomeos-federation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "AGPL-3.0-only"
description = "biomeOS federation and sub-federation management"

[dependencies]
# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# biomeOS types and core (AtomicClient, SystemPaths, CapabilityTaxonomy)
biomeos-core = { path = "../biomeos-core", version = "0.1.0" }
biomeos-types = { path = "../biomeos-types", version = "0.1.0" }
bytes = "1"

# HTTP client DEPRECATED: Use atomic_client (Unix sockets) for BearDog/Songbird
# # reqwest = { workspace = true }  # REMOVED: Use Tower Atomic (Songbird + BearDog) for Pure Rust HTTPS # REMOVED - Songbird/BearDog handle HTTP/TLS
base64 = { workspace = true }

[dev-dependencies]
serial_test = "3.2"
biomeos-test-utils = { path = "../biomeos-test-utils", version = "0.1.0" }
tokio-test = "0.4"
tempfile = { workspace = true }
sha2 = { workspace = true }

[lints]
workspace = true
