[package]
name = "biomeos-federation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "biomeOS federation and sub-federation management"

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["net", "io-util", "fs"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# biomeOS types and core (AtomicClient, SystemPaths, CapabilityTaxonomy)
biomeos-core = { path = "../biomeos-core", version = "0.1.0" }
biomeos-types = { path = "../biomeos-types", version = "0.1.0" }
bytes = { workspace = true }

base64 = { workspace = true }

[features]
test-helpers = []

[dev-dependencies]
biomeos-federation = { path = ".", version = "0.1.0", features = ["test-helpers"] }
biomeos-test-utils = { path = "../biomeos-test-utils", version = "0.1.0" }
tokio-test = { workspace = true }
tempfile = { workspace = true }
sha2 = { workspace = true }

[lints]
workspace = true
