[package]
name = "biomeos-genome-deploy"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
authors = ["ecoPrimals Collective"]
description = "Rust-based genomeBin deployment wrapper"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.0"
tar = "0.4"
indicatif = "0.17"
colored = "2.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
# DEEP DEBT: nix and dirs removed — pure Rust via $HOME/$EUID env resolution
tempfile = "3.10"
# memmap2 REMOVED — evolved to safe std::fs::read() (no unsafe code in entire crate)

[lib]
name = "genome_deploy"
path = "src/lib.rs"

[[bin]]
name = "genome-deploy"
path = "src/main.rs"
