[package]
name = "biomeos-genome-deploy"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors = ["ecoPrimals Collective"]
description = "Rust-based genomeBin deployment wrapper"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
indicatif = { workspace = true }
colored = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
# DEEP DEBT: nix and dirs removed — pure Rust via $HOME/$EUID env resolution
tempfile = { workspace = true }
# memmap2 REMOVED — evolved to safe std::fs::read() (no unsafe code in entire crate)

[lib]
name = "genome_deploy"
path = "src/lib.rs"

[[bin]]
name = "genome-deploy"
path = "src/main.rs"

[lints]
workspace = true
