[package]
name = "biomeos-genome-extract"
version = "4.0.0"
edition = "2021"
authors = ["ecoPrimals Team"]
license = "MIT"
description = "Pure Rust Universal genomeBin v4.0 Extractor - Binary as DNA"
repository = "https://github.com/ecoPrimals/biomeOS"

[dependencies]
# Serialization (Pure Rust)
serde = { workspace = true }
serde_json = { workspace = true }

# Compression (Pure Rust - ruzstd decoder only)
ruzstd = "0.7"

# Hashing (Pure Rust - SHA256)
sha2 = "0.10"
hex = "0.4"

# Error handling (Pure Rust)
anyhow = { workspace = true }
thiserror = { workspace = true }

[[bin]]
name = "genome-extract"
path = "src/main.rs"

# TRUE ecoBin v2.0 Principles (Extractor - User Systems):
# ✅ 100% Pure Rust (zero C dependencies except libc)
# ✅ Zero unsafe code
# ✅ Modern idiomatic Rust
# ✅ Platform-agnostic (runtime detection)
# ✅ Self-contained (no external tools)
# ✅ Deterministic (binary = DNA)
#
# NOTE: Creator (biomeos-genomebin-v3) may use zstd (C binding)
#       for encoding as it runs only on dev machines.
#       Extractor must be Pure Rust as it runs on user systems.
