[package]
name = "biomeos-genomebin-v3"
version = "3.0.0"
edition = "2021"
authors = ["ecoPrimals Team"]
license = "MIT"
description = "TRUE Binary Isomorphic genomeBin - Self-extracting multi-arch deployment format"
repository = "https://github.com/ecoPrimals/biomeOS"
readme = "README.md"

[dependencies]
# Serialization (Pure Rust)
serde = { workspace = true }
serde_json = { workspace = true }
bincode = "1.3"

# Compression (zstd for encoding, ruzstd for decoding if needed)
# NOTE: Creator runs on dev machines only, C dependency acceptable here
# Extractor (biomeos-genome-extract) uses Pure Rust ruzstd
zstd = "0.13"
ruzstd = "0.7"

# Hashing (Pure Rust - SHA256)
sha2 = "0.10"
hex = "0.4"

# Error handling (Pure Rust)
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging (Pure Rust)
tracing = { workspace = true }

# Async runtime (Pure Rust)
tokio = { workspace = true, features = ["fs", "io-util"] }

# Path handling (Pure Rust)
etcetera = { workspace = true }

# Date/time (Pure Rust)
chrono = { version = "0.4", features = ["serde"] }

# Temp directory (Pure Rust)
tempfile = "3.8"

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = "3.8"
tracing-subscriber = "0.3"

[[example]]
name = "create_self_extracting"
path = "examples/create_self_extracting.rs"

[lib]
name = "biomeos_genomebin_v3"
path = "src/lib.rs"

# TRUE ecoBin v2.0 Principles:
# ✅ 100% Pure Rust (zero C dependencies except libc)
# ✅ Zero unsafe code
# ✅ Modern idiomatic Rust
# ✅ Platform-agnostic
# ✅ Runtime discovery
