[package]
name = "biomeos-genomebin-v3"
version = "3.0.0"
edition.workspace = true
authors = ["ecoPrimals Team"]
license.workspace = true
rust-version.workspace = true
description = "genomeBin v3.0 - TRUE binary isomorphic format for ecoPrimals"
repository = "https://github.com/ecoPrimals/biomeOS"
readme = "README.md"

[dependencies]
# Types
biomeos-types = { path = "../biomeos-types", version = "0.1.0" }
bytes = { workspace = true }

# Error handling (Pure Rust)
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization (Pure Rust)
serde = { workspace = true }
serde_json = { workspace = true }

# Logging (Pure Rust)
tracing = { workspace = true }

# Compression (Pure Rust) - lz4_flex uses 100% Rust
lz4_flex = { workspace = true }

# v4.1 format uses lz4_flex for manifest compression (same as binary compression)
# — keeps the format self-consistent and avoids a separate compression dependency

# Hashing (Pure Rust)
blake3 = { workspace = true }
sha2 = { workspace = true }

# Hex encoding (Pure Rust)
hex = { workspace = true }

# Datetime (Pure Rust)
chrono = { workspace = true }

# Path handling (Pure Rust)
etcetera = { workspace = true }

# Temp files for extraction
tempfile = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lib]
name = "biomeos_genomebin_v3"
path = "src/lib.rs"

# TRUE ecoBin v2.0 Principles:
# ✅ 100% Pure Rust (no C deps)
# ✅ Zero unsafe code
# ✅ Multi-architecture (x86_64, aarch64, etc.)
# ✅ Self-extracting capability
# ✅ Fractal composition (genomeBins can contain genomeBins)
# ✅ NUCLEUS atomic types (TOWER, NODE, NEST, NUCLEUS)

[lints]
workspace = true
