[package]
name = "biomeos-graph"
version = "0.1.0"
edition.workspace = true
description = "Type-safe ingestion layer for Neural API deployment graphs"
license = "AGPL-3.0-only"
repository = "https://github.com/ecoPrimals/biomeOS"
keywords = ["biomeOS", "graph", "deployment", "toml"]
categories = ["config"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async & Events (for events.rs GraphEventBroadcaster)
tokio = { version = "1.34", features = ["sync", "time", "test-util", "net", "io-util", "macros", "process", "rt"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"

# POSIX syscall wrappers (safe Rust, signal handling for process management)
rustix = { version = "0.38", features = ["process"] }

# Metrics storage (Pure Rust, ecoBin compliant)
redb = "2.4"

# biomeOS internal crates
biomeos-types = { path = "../biomeos-types", version = "0.1.0" }
biomeos-nucleus = { path = "../biomeos-nucleus", version = "0.1.0" }

[dev-dependencies]
# Testing
tempfile = "3.10"

[features]
default = []

# Enable async execution
async = []

[lints]
workspace = true
